force-app/main/default/objects/Meeting_Participant__c/Meeting_Participant__c.object-meta.xml
<CustomObject>
    <label>Meeting Participant</label>
    <nameField>
        <displayFormat>MP-{0}</displayFormat>
        <label>Meeting Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>