force-app/main/default/objects/Meeting_Participant__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Appeared</fullName>
            </value>
            <value>
                <fullName>Did Not Appear</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>No Service</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Other﻿</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>