force-app/main/default/objects/Meeting_Participant__c/fields/Attendance_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Other_Text__c</fullName>
    <label>Attendance Other Text</label>
    <type>TextArea</type>
</CustomField>