force-app/main/default/objects/Meeting_Participant__c/fields/Case_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case Role for Meeting participant</description>
    <inlineHelpText>Help Text Needed</inlineHelpText>
    <label>Case Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Role__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Role__c</referenceTo>
    <relationshipLabel>Meeting Participants</relationshipLabel>
    <relationshipName>Meeting_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>