force-app/main/default/objects/Meeting_Participant__c/fields/Case_Role_Address__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Address__c</fullName>
    <formula>IF(NOT(ISBLANK( Case_Role__c )),
  Case_Role__r.Location_Street__c &amp; ' ' &amp; Case_Role__r.Location_Street2__c &amp; BR()
							&amp; Case_Role__r.Location_City__c &amp;', '&amp; Case_Role__r.Location_State__c &amp;' '&amp;
							Case_Role__r.Location_zip_code__c,  
				'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Role Address</label>
    <type>Text</type>
</CustomField>