force-app/main/default/objects/Meeting_Participant__c/fields/Case_Role_Entity__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Entity__c</fullName>
    <formula>IF(NOT(ISBLANK(Case_Role__r.Entity__c)), IF( ISBLANK(Case_Role__r.Entity__r.Name), Case_Role__r.Entity__r.PersonContact.FirstName + " " + IF( ISBLANK(Case_Role__r.Entity__r.PersonContact.MiddleName), Case_Role__r.Entity__r.PersonContact.LastName, Case_Role__r.Entity__r.PersonContact.MiddleName &amp; " " &amp; Case_Role__r.Entity__r.PersonContact.LastName) , Case_Role__r.Entity__r.Name),'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Role Entity</label>
    <type>Text</type>
</CustomField>