force-app/main/default/objects/Meeting_Participant__c/fields/Generate_WCA_61_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_WCA_61_Document__c</fullName>
    <description>##Conga created btn:00bZ0000000Ibnz</description>
    <formula>"&amp;id=" + Id + 
"&amp;queryid=[Complainant]a0md00000064cjQAAQ?pv0=" + Case__c + ",[Defendant]a0md00000064cjRAAQ?pv0=" + Case__c + ",[Occupation]a0md00000064cjPAAQ?pv0=" + Case__c + ",[VioTable]a0md00000064cjSAAQ?pv0=" + Case__c + ",[Guarantor]a0md00000064cjNAAQ?pv0=" + Case__c + ",[Successor]a0md00000064cjLAAQ?pv0=" + Case__c + ",[WCAOffice]a0md00000064cjOAAQ?pv0=" + Case__c + ",[HearingInfo]a0md00000064cjuAAA?pv0=" + Case__c + ",[CaseInfo]a0md00000064cjCAAQ?pv0=" + Case__c + ",[EMP]a0md00000064cj2AAA?pv0=" + Case__c + "~pv1=\"Case employer\",[GUAR]a0md00000064cj2AAA?pv0=" + Case__c + "~pv1=\"Guarantor\"" + 
"&amp;templategroup=WCAHearing" +
"&amp;templateid=a0nd0000005OStZ" + 
"&amp;qmode=Download" + 
"&amp;OFN=WCA 61-" + Case__r.Name + "-" + Case__r.Employer__r.Name</formula>
    <label>Generate WCA 61 Document</label>
    <type>Text</type>
</CustomField>