force-app/main/default/objects/Meeting_Participant__c/fields/Interpreter_Language__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Language__c</fullName>
    <description>Language derived from parent Case Role record.</description>
    <formula>TEXT(Case_Role__r.Interpreter_Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interpreter Language</label>
    <type>Text</type>
</CustomField>