force-app/main/default/objects/Meeting_Participant__c/fields/Meeting_Participant_Full_Output__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Participant_Full_Output__c</fullName>
    <formula>Case_Role__r.Relationship_Full_Output__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Participant Full Output</label>
    <type>Text</type>
</CustomField>