force-app/main/default/objects/Meeting_Participant__c/fields/Name_of_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replace zName of Attendee</description>
    <label>Name of Attendee</label>
    <referenceTo>Case_Role__c</referenceTo>
    <relationshipLabel>Meeting Participants (Name of Attendee)</relationshipLabel>
    <relationshipName>Meeting_Participants2</relationshipName>
    <type>Lookup</type>
</CustomField>