force-app/main/default/objects/Meeting_Participant__c/fields/Other_Language_or_Dialect__c.field-meta.xml
<CustomField>
    <fullName>Other_Language_or_Dialect__c</fullName>
    <formula>Case_Role__r.Other_Language_or_Dialect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Language or Dialect</label>
    <type>Text</type>
</CustomField>