force-app/main/default/objects/Meeting_Participant__c/fields/SMS_Reminder__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder__c</fullName>
    <formula>Case__r.Case_Number__c &amp;" - "&amp;

"Hi, This is from CA DIR. Your " &amp; Meeting__r.Record_Type_Name__c &amp;" is "&amp;text(Meeting__r.Status__c) &amp;" for "&amp;TEXT(MONTH(Meeting__r.Meeting_Start_Date__c)) &amp; "/" &amp; TEXT(DAY(Meeting__r.Meeting_Start_Date__c)) &amp; "/" &amp;TEXT(YEAR(Meeting__r.Meeting_Start_Date__c))&amp;" "&amp;Meeting__r.Meeting_Start_Time__c &amp; 

", which is "&amp;IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"In Person" ),"an ","a ")&amp;text(Meeting__r.In_Person_Remote_Meeting__c )&amp;" meeting - "&amp; 

IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"In Person" ),"at " &amp;Meeting__r.WCA_Office__r.Name &amp;", "&amp; Meeting__r.WCA_Office__r.Office_Address_Formula__c
,IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"Phone/Remote")," "&amp; Meeting__r.Audio_telephone__c,IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"Video" ),"Join from PC, Mac, Linux, iOS or Android: "&amp; Meeting__r.Video_Meeting_URL__c &amp; " " &amp; Meeting__r.Video_Meeting_Information__c,"")))</formula>
    <label>SMS Reminder</label>
    <type>Text</type>
</CustomField>