force-app/main/default/objects/Meeting_Participant__c/fields/SMS_Spanish_Text__c.field-meta.xml
<CustomField>
    <fullName>SMS_Spanish_Text__c</fullName>
    <formula>Case__r.Case_Number__c  &amp;" - "&amp;

"Hola, este mensaje es por parte de CA DIR. Su " &amp; Meeting__r.Record_Type_Name__c &amp;" está "&amp;text(Meeting__r.Status__c) &amp;" para "&amp;TEXT(MONTH(Meeting__r.Meeting_Start_Date__c)) &amp; "/" &amp; TEXT(DAY(Meeting__r.Meeting_Start_Date__c)) &amp; "/" &amp;TEXT(YEAR(Meeting__r.Meeting_Start_Date__c))&amp;" "&amp;Meeting__r.Meeting_Start_Time__c &amp;

", La cual es una reunión "&amp;text(Meeting__r.In_Person_Remote_Meeting__c )&amp;
IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"In Person" ), Meeting__r.WCA_Office__r.Name &amp;", "&amp; Meeting__r.WCA_Office__r.Office_Address_Formula__c
,IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"Phone/Remote")," " &amp;Meeting__r.Audio_telephone__c,IF(ISPICKVAL(Meeting__r.In_Person_Remote_Meeting__c,"Video" ),"Join from PC, Mac, Linux, iOS or Android: " &amp; Meeting__r.Video_Meeting_URL__c &amp; " " &amp; Meeting__r.Video_Meeting_Information__c,""))) &amp; 

" - Si desea continuar recibiendo mensajes de texto por parte de la Oficina del Comisionado Laboral del DIR/CA, responda “SI”. Tarifas por mensajes y datos pueden aplicar. "</formula>
    <label>SMS Spanish Text</label>
    <type>Text</type>
</CustomField>