force-app/main/default/objects/Meeting_Participant__c/fields/Subpoena_URL_633_15a__c.field-meta.xml
<CustomField>
    <fullName>Subpoena_URL_633_15a__c</fullName>
    <formula>"&amp;id=" + Id +
"&amp;reportid=[Employee]00Od0000004pzun?pv2=" + Case__r.Id
+ ",[Employors]00Od0000004pzuo?pv2=" + Case__r.Id
+ ",[All]00Od0000004pzup?pv2=" + Case__r.Id +
"&amp;queryid=[WCAOffice]a0md00000064cjO?pv0=" + Case__r.Id
+ ",[CaseInfo]a0md00000064cjC?pv0=" + Case__r.Id
+ ",[CaseRole]a0md00000064cjB?pv0=" + Case_Role__r.Id
+ "&amp;AttachmentParentID=" + Meeting__r.Id
+ "&amp;qmode=Download"
+ "&amp;DefaultPDF=0"
+ "&amp;templateId=a0nd0000005OStm"
+ "&amp;OFN={Template.Label}" + " " + Case__r.Case_Number__c + " " + Case_Role__r.Account_Name__c
+ "&amp;SC0=1"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subpoena URL 633 15a</label>
    <type>Text</type>
</CustomField>