force-app/main/default/objects/Meeting_Participant__c/recordTypes/Meeting.recordType-meta.xml
<RecordType>
    <fullName>Meeting</fullName>
    <active>true</active>
    <description>Used for meetings and hearings</description>
    <label>Meeting/Hearing</label>
</RecordType>