force-app/main/default/objects/Meeting_Participant__c/validationRules/Require_Case_to_match_Case_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Case_to_match_Case_Role</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   NOT(ISBLANK(Role__c )),
   Meeting__r.Case__c &lt;&gt; Case_Role__r.Case__c
)</errorConditionFormula>
    <errorMessage>The Case on the Case Role must equal the Case on the Meeting</errorMessage>
</ValidationRule>