force-app/main/default/objects/Meeting_Participant__c/listViews/Garment_Meeting_Participants.listView-meta.xml
<ListView>
    <fullName>Garment_Meeting_Participants</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Role__c</columns>
    <columns>Name_of_Attendee__c</columns>
    <columns>Meeting__c</columns>
    <columns>Role__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Attendance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Meeting_Participant__c.Meeting</value>
    </filters>
    <label>Garment Meeting Participants</label>
    <sharedTo>
        <roleAndSubordinatesInternal>WCA</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>WCA_633</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>